tests/baselines/reference/numeric-separator-literal-nzd-nsl-dds-dunder-err.errors.txt
numeric-separator-literal-nzd-nsl-dds-dunder-err.ts(28,2): error TS6188: Numeric separators are not allowed here.
numeric-separator-literal-nzd-nsl-dds-dunder-err.ts(28,3): error TS6189: Multiple consecutive numeric separators are not permitted.


==== numeric-separator-literal-nzd-nsl-dds-dunder-err.ts (2 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in DecimalIntegerLiteral
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        ...
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
    
      NonZeroDigit :: one of
        1 2 3 4 5 6 7 8 9
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    0__0123456789
     ~
!!! error TS6188: Numeric separators are not allowed here.
      ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    